--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
-  "name": "chess-frontend-tests",
+  "name": "nateperry-chess-frontend-tests",
   "description": "FrontEnd Programming Challenge for Chess.com",
   "license": "MIT",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.1.0-beta.0",
+    "sass": "^1.59.2",
+    "vite": "^4.2.0-beta.1"
+  },
+  "volta": {
+    "node": "18.15.0"
+  }
 }
